# clustdock

./: .gitignore  .project  .rpmmacros  .travis.yml  README.md  clustdock.spec  configure.ac  deps.make  valgrind.supp
misc/: architecture.tex  article.ipynb
misc/shared/: .project  custom-test-driver
misc/travis/: install-dependencies.sh
packaged/: Makefile.am
packaged/conf/: clustdock-hook.example  clustdock.conf  clustdockd.conf  clustdockd.service
packaged/doc/: Doxyfile_specific.in
packaged/lib/: Makefile.am
packaged/lib/clustdock/: __init__.py  client.py  docker_node.py  libvirt_node.py  server.py  virtual_cluster.py
tests/: Makefile.am  __init__.py  test_docker_nodes.py  test_libvirt_nodes.py  test_misc.py  test_virtual_node.py
